--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,6 +26,9 @@ jobs:
         run: yarn build
       - name: Publish to registry
         if: startsWith(github.ref, 'refs/tags')
-        run: yarn publish --new-version '${{ github.ref_name }}'
+        run: |
+          git config --local user.email "${{ github.event.head_commit.author.email }}"
+          git config --local user.name "${{ github.event.head_commit.author.name }}"
+          yarn publish --new-version '${{ github.ref_name }}'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
