--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,11 +24,12 @@ jobs:
         run: yarn generate:index
       - name: Build application
         run: yarn build
-      - name: Publish to registry
-        if: startsWith(github.ref, 'refs/tags')
+      - name: Identify to git
         run: |
           git config --local user.email "${{ github.event.head_commit.author.email }}"
           git config --local user.name "${{ github.event.head_commit.author.name }}"
-          yarn publish --new-version '${{ github.ref_name }}'
+      - name: Publish to registry
+        if: startsWith(github.ref, 'refs/tags')
+        run: yarn publish --new-version '${{ github.ref_name }}'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
