--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "fast-safe-stringify": "^2.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
